Sunday, February 1, 2009
	Chris Thielen:
		* Fixed a bug with glScissor (it doesn't use our established
		ortho??)
		* Fixed UI dragging errors introduced by new coordinate system

Saturday, January 31, 2009
	Chris Thielen:
		* Upgraded to afont-0.9
		* Created Debug/graphics.cpp, Graphics/image2.cpp and
		--graphics-demo to work on replacement Image class
		* Graphics work, ensuring functions work, writing clean new
		Image class (currently called Image2)
		* Fixed a bug in DrawCircle where circle would be incomplete
		(needed to go a little more than once around for the verticies
		to fit together in OGL logic or something)
		* Fixed the image and coordinate issues but reverted back to
		  video buffer style coordinates and now all the math and
		  angles need to be re-examined...
		* Fixed the major math issues

Friday, January 30, 2009
	Chris Thielen:
		* Reverted back font changes as Jared has sent me afont-0.7 which should have OpenGL fixes we need (afont is faster than NeHe's freetype/OpenGL code as fonts are pre-rendered and saved)

Monday, January 19, 2009
	Chris Thielen:
		* Added the Bitstream Vera fonts package (v1.10) and included it's license under LICENSE.fonts
		* Removed afont from Font class and started using freetype2 directly using NeHe Tutorial #43 code (believed to be free)

Sunday, January 18, 2009
	Chris Thielen:
		* Fixed a bug in Image where images that weren't powers of two were being incorrectly scaled
		* Fixed a bug in Image::DrawAbsolute where texture sizes were used instead of the correct virtual sizes

Tuesday October 14, 2008
	Chris Thielen:
		* Added new INSTALL file from Leon Vayman
		* Fixed a bug/typo in configure.in, thanks Leon Vayman for the report/fix

Sunday October 12, 2008
	Chris Thielen:
		* Fixed an issue with the way we ensure powers of two: added tw,th (texture scaling coords) to Image
		  to account for this issue (when we expand the texture canvas, we need to set the scaling coords so