@@ -24,7 +24,7 @@ afontgl *afont_gl_load( char *path );
 afontgl *afont_gl_load_fp( FILE *fp );
 afontgl *afont_gl_convert( afont *a );
 void afont_gl_free( afontgl *ag );
-void afont_gl_render_text( afontgl *a, char *text );
+void afont_gl_render_text( afontgl *a, const char *text );
   /* Render a string of text, setting up the pixel transfer options
    * appropriately to display in the current color. */
 
