@@ -21,8 +21,7 @@ void Widget::Draw( int relx, int rely ) {
 	// Draw any children
 	list<Widget *>::iterator i;
 	for( i = children.begin(); i != children.end(); ++i ) {
-		cout << "drawing a widget child, i'm at " << x << ", " << y << ", telling child to be at " << (x + relx) << ", " << (y - rely) << endl;
-		(*i)->Draw( x + relx, y - rely );
+		(*i)->Draw( x + relx, y + rely );
 	}
 }
 
